--- a/login.html
+++ b/login.html
@@ -8,11 +8,43 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-    <header></header>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"><img src="img/logo.png"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Promoções</a>
+                  </li>
+                  <li class="nav-item">
+                  <a class="nav-link" href="#">Console </a>
+                  </li>
+                  <li class="nav-item">
+                  <a class="nav-link" href="#">Jogos </a>
+                  </li>
+                  <li class="nav-item">
+                  <a class="nav-link" href="login.html">Login </a>
+                  </li>
+      
+                </ul>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="O que deseja buscar?" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Buscar</button>
+                </form>
+              </div>
+            </div>
+          </nav>
+
+
+    </header>
 
     <main>
         <section id="section-login">
@@ -75,7 +107,7 @@
     </main>
 
     <footer>
-        <p>Desenvolvido por Langa</p>
+        <p>Desenvolvido por Nyahôo</p>
     </footer>
 
     <button id="voltar-topo" type="button" class="btn btn-outline-primary">&uarr; Voltar ao topo</button>
@@ -83,7 +115,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
+    <script src="js/js-script.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.6.1.js"
         integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
