--- a/index.html
+++ b/index.html
@@ -114,12 +114,12 @@
       </main>
 
       <footer>
-        <p>Desenvolvido por Langa</p>
+        <p>Desenvolvido por Nyahôo</p>
       </footer>
     
       <button id="voltar-topo" type="button" class="btn btn-outline-primary" onclick="topo()">&uarr; Voltar ao topo</button>
     
-      <script src="js/script.js"></script>
+      <script src="js/js-script.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
