--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="card" style="width: 18rem;">
               <img src="img/jogo1.PNG" class="card-img-top" alt="...">
               <div class="card-body">
-              <h5 class="card-title">Joho 1</h5>
+              <h5 class="card-title">Jogo 1</h5>
               <p class="card-text">Jogo do ano</p>
               <p class="preco">R$: 199,89</p>
               <a href="#" class="btn btn-primary">comprar</a>
@@ -92,7 +92,7 @@
           <div class="card" style="width: 18rem;">
             <img src="img/jogo2.PNG" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Joho 2</h5>
+              <h5 class="card-title">Jogo 2</h5>
               <p class="card-text">Jogo do ano</p>
               <p class="preco">R$: 199,89</p>
               <a href="#" class="btn btn-primary">comprar</a>
@@ -101,7 +101,7 @@
           <div class="card" style="width: 18rem;">
             <img src="img/jogo3.PNG" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Joho 3</h5>
+              <h5 class="card-title">Jogo 3</h5>
               <p class="card-text">Jogo do ano</p>
               <p class="preco">R$: 199,89</p>
               <a href="#" class="btn btn-primary">comprar</a>
