--- a/login.html
+++ b/login.html
@@ -62,7 +62,7 @@
                             placeholder="Insira a sua senha" class="form-control" />
                     </p>
                     <p>
-                        <input type="button" value="login" class="btn btn-primary" placeholder="" id="bt-login" onclick="login()">
+                        <input type="button" value="login" class="btn btn-primary" placeholder="" id="bt-login" onclick="login()"/>
                        
                         
                     </p>
