--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -63,6 +64,9 @@
               </div>
               <div class="carousel-item">
                 <img src="img/banner3.PNG" class="d-block w-100" alt="Várias novidades de produtos">
+              </div>
+              <div class="carousel-item">
+                <img src="img/Rectangle.svg" class="d-block w-100" alt="Várias novidades de produtos">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
