--- a/login.html
+++ b/login.html
@@ -109,7 +109,7 @@
     </main>
 
     <footer>
-        <p>Desenvolvido por Nyahôo</p>
+        <p>Desenvolvido por l@ng@</p>
     </footer>
 
     <button id="voltar-topo" type="button" class="btn btn-outline-primary" onclick="topo()">&uarr; Voltar ao topo</button>
